[package]
name = "lispust-grpc"
version = "0.1.0"
authors = ["krrrr38 <k.kaizu38@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
lispust-core = { path = "../lispust-core" }
tonic = { version = "0.5" }
prost = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost"] }
